Fix icons alignment in List (#10266)

--- a/styles/widgets/generic/list.generic.less
+++ b/styles/widgets/generic/list.generic.less
@@ -59,6 +59,8 @@
 
 .dx-list-item-icon-container {
     width: @GENERIC_BASE_ICON_SIZE + @GENERIC_LIST_ITEM_HORIZONTAL_PADDING;
+    height: @GENERIC_BASE_ICON_SIZE;
+    vertical-align: top;
 }
 
 .dx-list-item-icon {
